# html_vision_parse

./: .gitignore  README.md  config.yaml.example  main.py  pyproject.toml  start_api.py
benchmark/: __init__.py  benchmarker.py  run.py  urls.py
config/: settings.py
docs/: README.md  api.md  cli.md  config.md
examples/: long_page.py
prompts/: __init__.py  extraction_prompt.py
src/: AGENTS.md  __init__.py  api.py  api_client.py  batch_cli.py  batch_processor.py  browser.py  config_loader.py  extractor.py  flexible_extractor.py  html_renderer.py  inference.py  internvl_engine.py  model_loader.py  ocr_extractor.py  pipeline.py  screenshot.py  simple_pipeline.py  vllm_engine.py
tests/: test_simple_pipeline.py
